--- a/app/views/layouts/shared/_navigation.html.erb
+++ b/app/views/layouts/shared/_navigation.html.erb
@@ -16,16 +16,31 @@
                     <li>
                         <%= @user.email %>
                     </li>
+                    <li>
+                        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+                    </li>
+                <% else %>
+                    <li>
+                        <%= link_to "Login", new_user_session_path%>
+                    </li>
+                    <li>
+                        <%= link_to "Sign Up", new_user_registration_path %>
+                    </li>
                 <% end %>
-                <li>
-                    <%= link_to "Login", new_user_session_path%>
-                </li>
-                <li>
-                    <%= link_to "Sign Up", new_user_registration_path %>
-                </li>
-                <li>
-                    <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-                </li>
             </ul>
             <!-- /.navbar-static-side -->
+            <div class="navbar-default sidebar" role="navigation">
+                <div class="sidebar-nav navbar-collapse">
+                    <ul class="nav" id="side-menu">
+                        <li>
+                            <%= link_to "Início", root_path %>
+                        </li>
+                        <% if user_signed_in? %>
+                            <li>
+                                <%= link_to "Meus Livros", loans_path(current_user)%>
+                            </li>
+                        <% end %>
+                    </ul>
+                </div>
+            </div>
         </nav>
