--- a/app/views/loans/_form.html.erb
+++ b/app/views/loans/_form.html.erb
@@ -1,3 +1,5 @@
+<h2>Livro: <%=@book.title%></h2>
+<h2>ID: <%= @book.id%></h2>
 <%= form_for(@loan) do |f| %>
   <% if @loan.errors.any? %>
     <div id="error_explanation">
@@ -10,11 +12,6 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
   <div class="field">
     <%= f.label :book_id %><br>
     <%= f.text_field :book_id %>
