--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -1,33 +1,69 @@
-<p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>Listing Loans</h1>
+<head>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Book</th>
-      <th>Date</th>
-      <th>Return</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <tbody>
-    <% @loans.each do |loan| %>
-      <tr>
-        <td><%= loan.user %></td>
-        <td><%= loan.book %></td>
-        <td><%= loan.date %></td>
-        <td><%= loan.return %></td>
-        <td><%= link_to 'Show', loan %></td>
-        <td><%= link_to 'Edit', edit_loan_path(loan) %></td>
-        <td><%= link_to 'Destroy', loan, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-<br>
+</head>
 
-<%= link_to 'New Loan', new_loan_path %>
+<body>
+
+    <%= render partial: "layouts/shared/navigation" %> 
+
+    <div id="wrapper">
+
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                        <div class = "panel-body">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>Livro</th>
+                                            <th>Devolução</th> 
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                            <% @loans.each do |loan| %>
+                                                <tr>
+                                                    <td><%=loan.book.title%></td>
+                                                    <td><%=loan.return%></td>
+                                                    <td>
+                                                        <%= link_to loan, method: :delete, class: "btn btn-info" do %>
+                                                                Devolver
+                                                        <% end %>
+                                                    </td>
+                                                </tr>
+                                            <% end %>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
+                        </div> 
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /#page-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+
+</body>
+
+</html>
