--- a/app/views/site/home/index.html.erb
+++ b/app/views/site/home/index.html.erb
@@ -20,21 +20,26 @@
 
 <body>
 
-    <%= render partial: "layouts/shared/navigation" %>
+    <%= render partial: "layouts/shared/navigation" %> 
 
     <div id="wrapper">
 
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                        <div class="table-responsive">
+                        <div class = "panel-body">
+                            <% if user_signed_in? %>
+                                <%= link_to "Cadastrar livro", new_book_path, type: "button", class:"btn btn-info" %>
+                            <% end %>
+                            <div class="table-responsive">
                                 <table class="table table-striped table-bordered table-hover">
                                     <thead>
                                         <tr>
                                             <th>Título</th>
                                             <th>Autor</th>
-                                            <th>Editor</th>   
-                                            <th></th>
+                                            <th>Editor</th> 
+                                            <th>Qnt Páginas</th>  
+                                            <th>Disponibilidade</th> 
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -42,24 +47,32 @@
                                                 <tr>
                                                     <td><%=book.title%></td>
                                                     <td><%=book.author%></td>
-                                                    <td><%= book.editor%></td>
+                                                    <td><%=book.editor%></td>
+                                                    <td><%=book.page%></td>
                                                     <td>
+                                                      <% if book.available? %>
                                                         <% if user_signed_in? %>
-                                                            <%= link_to "#", class: "btn btn-success" do %>
-                                                                Empréstimo
+                                                            <%= link_to new_loan_path(book.id), class: "btn btn-success", data: {confirm: "Deseja pegar este livro?"} do %>
+                                                                Disponível
                                                             <% end %>
                                                         <% else %>
                                                             <%= link_to new_user_session_path, class: "btn btn-success" do %>
                                                                 Efetue login para pegar por empréstimo
                                                             <% end %>
                                                         <% end %>
+                                                      <% else %>
+                                                        <%= link_to "#", class: "btn btn-danger", disabled: true do %>
+                                                          Indisponível
+                                                        <% end %>
+                                                      <% end %>
                                                     </td>
                                                 </tr>
                                             <% end %>
                                     </tbody>
                                 </table>
                             </div>
-                            <!-- /.table-responsive --> 
+                            <!-- /.table-responsive -->
+                        </div> 
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
